--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.library</groupId>
+
+    <groupId>com.example</groupId>
     <artifactId>library-management</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -29,16 +30,18 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- JSTL for JSP taglibs -->
+        <!-- JSTL API -->
         <dependency>
             <groupId>jakarta.servlet.jsp.jstl</groupId>
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.0</version>
         </dependency>
+
+        <!-- JSTL Implementation -->
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 
